<resources>
    <string name="app_name">Health Watch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="measure">Measure</string>
    <string name="history">History</string>
    <string name="health">Health</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_waiting">Wait</string>
    <string name="title_activity_record">Record</string>
    <string name="keepon">Continue</string>
    <string name="cancel_measure">Cancel measurement?</string>
    <string name="cancel_measure_msg">Do you want to cancel the measurement?</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_record_msg">You will lose the recorded data!</string>
    <string name="dismiss">Dismiss</string>
    <string name="no">No</string>
    <string name="address_found">Address have been found</string>
    <string name="no_address_found">No address found</string>
    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude number used</string>
    <string name="no_geocoder_available">Unable to determine address</string>
    <string name="gps_latitude">gps_latitude</string>
    <string name="gps_longitude">gps_longitude</string>
    <string name="gps_switch">gps_switch</string>
    <string name="systolic_text">Systolic (mmHg)</string>
    <string name="diastolic_text">Diastolic (mmHg)</string>
    <string name="zero">0</string>
    <string name="include_my_location">Include my location</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="save">Save</string>
    <string name="repeat">Repeat</string>
    <string name="see_history">See History</string>
    <string name="measure_now">Measure Now</string>
    <string name="unknown_location">Unknown location</string>
    <string name="unknown_date">Unknown date</string>
    <string name="latest_reading">Latest reading</string>
    <string name="loading_location">Loading location...</string>
    <string name="no_records_available">No records available</string>
    <string name="final_reading">Final reading</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="getting_diatolic">Acquiring diastolic value</string>
    <string name="getting_systolic">Acquiring systolic value</string>
    <string name="deflating">Deflating cuff</string>
    <string name="inflating">Inflating cuff</string>
    <string name="mmhg">mmHg</string>
    <string name="verify_bluetooth">Verifying Bluetooth is on</string>
    <string name="connecting">Connecting to Health Watch</string>
    <string name="search">Searching for Health Watch</string>
    <string name="title_activity_health">HealthActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pinLength">4</string>
    <string name="key_email">key_email</string>
    <string name="key_timeout">key_timeout</string>
    <string name="sparkPostApiKey">589a70bb08ce38a68d6d1bc75bde72ae873029e4</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="privacy">Privacy</string>
    <string name="notification">Notification</string>
    <string name="enter_current_pin_code">Enter current pin code</string>
    <string name="key_pin">key_pin</string>
    <string name="next">Next</string>
    <string name="enter_your_new_pin">Enter a new pin</string>
    <string name="enter_pin_again">Enter pin again to confirm</string>
    <string name="invalid_pin">Pin is incorrect</string>
    <string name="new_4_digit_pin">Enter a new 4 digit pin code</string>
    <string name="reset_mail_sent">A temporary pin code has been sent to your email</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="pin_successfully_changed">Pin successfully changed</string>
    <string name="incorrect_pin">Incorrect pin</string>
    <string name="new_pin_must_be_4_digit">New pin must be 4 digit</string>
    <string name="reset_pin">reset pin</string>
    <string name="sign_up">Sign Up</string>
    <string name="key_fingerprint">key_fingerprint</string>
    <string name="yes">Yes</string>
    <string name="use_my_fingerprint">Use my fingerprint</string>
    <string name="no_bluetooth">Device does not support bluetooth</string>
    <string name="debug">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam neque mi, venenatis non ex non, vestibulum dapibus neque. Vestibulum eu tempor nisi</string>
    <string name="debug_link">http://www.lipsum.com/feed/html</string>
    <string name="menu_refresh">Refresh</string>

    <string name="title_activity_help">Help</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="open">open</string>
</resources>
