<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_measure"
            android:icon="@mipmap/ic_track_changes_black_24dp"
            android:title="@string/measure" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_book_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_health"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/health" />
        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_info_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
