<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="edu.slu.parks.healthwatch.authentication.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/enter_your_pin"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <com.andrognito.pinlockview.IndicatorDots
        android:id="@+id/indicator_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:dotFilledBackground="@drawable/dot_filled"
        app:pinLength="@string/pinLength" />

    <com.andrognito.pinlockview.PinLockView
        android:id="@+id/pin_lock_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:keypadDeleteButtonPressedColor="@color/colorAccent"
        app:keypadTextColor="@android:color/primary_text_light" />

    <ImageView
        android:id="@+id/fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:srcCompat="@mipmap/ic_fingerprint_black_48dp" />

    <TextView
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/use_my_fingerprint"
        android:visibility="gone" />


</LinearLayout>
